chore: fix cherry-picks